--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,6 @@
-
 PORT=4000
 MONGO_URI=mongodb+srv://talhaayub:hello2002@cluster0.78mtw8c.mongodb.net/DevConnect
-
-
 JWT_SECURITY=KHAN@2002
+
+
+FRONTEND_URL=http://localhost:5173
