fix: update environment variable for frontend URLs and enhance CORS configuration

--- a/server/.env
+++ b/server/.env
@@ -3,4 +3,4 @@ MONGO_URI=mongodb+srv://talhaayub:hello2002@cluster0.78mtw8c.mongodb.net/DevConn
 JWT_SECURITY=KHAN@2002
 
 
-FRONTEND_URL=http://localhost:5173
+FRONTEND_URLS=http://localhost:5173,https://devconnecttalk.netlify.app
